<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yamada.allrmprogram.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/word1"
            android:textSize="8pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="3"
                android:id="@+id/editText"
                android:textSize="10pt"
                android:layout_weight="0.2" />

            <TextView
                android:text="@string/word2"
                android:textSize="8pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_weight="0.2" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/spinner"
                android:entries="@array/reps"
                android:layout_weight="0.2"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:layout_weight="0.2"
                android:text="reps"
                android:textSize="8pt"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="RM1_OnClick"
            android:background="@drawable/text_color"
            android:paddingBottom="2dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/rm1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/rm1"
                android:layout_weight="0.3"
                android:textSize="12pt"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/rm1_text"
                android:textSize="12pt"
                android:gravity="center"
                android:layout_weight="0.4" />

            <TextView
                android:text="@string/kg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:textSize="12pt"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="RM2_OnClick"
            android:background="@drawable/text_color"
            android:paddingBottom="2dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/rm2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/rm2"
                android:layout_weight="0.3"
                android:textSize="12pt"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/rm2_text"
                android:textSize="12pt"
                android:gravity="center"
                android:layout_weight="0.4" />

            <TextView
                android:text="@string/kg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:textSize="12pt"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="RM3_OnClick"
            android:background="@drawable/text_color"
            android:paddingBottom="2dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/rm3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/rm3"
                android:layout_weight="0.3"
                android:textSize="12pt"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/rm3_text"
                android:textSize="12pt"
                android:gravity="center"
                android:layout_weight="0.4" />

            <TextView
                android:text="@string/kg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:textSize="12pt"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="RM5_OnClick"
            android:background="@drawable/text_color"
            android:paddingBottom="2dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/rm5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/rm5"
                android:layout_weight="0.3"
                android:textSize="12pt"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/rm5_text"
                android:textSize="12pt"
                android:gravity="center"
                android:layout_weight="0.4" />

            <TextView
                android:text="@string/kg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:textSize="12pt"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="RM7_OnClick"
            android:background="@drawable/text_color"
            android:paddingBottom="2dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/rm7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/rm7"
                android:layout_weight="0.3"
                android:textSize="12pt"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/rm7_text"
                android:textSize="12pt"
                android:gravity="center"
                android:layout_weight="0.4" />

            <TextView
                android:text="@string/kg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:textSize="12pt"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="RM8_OnClick"
            android:background="@drawable/text_color"
            android:paddingBottom="2dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/rm8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/rm8"
                android:layout_weight="0.3"
                android:textSize="12pt"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/rm8_text"
                android:textSize="12pt"
                android:gravity="center"
                android:layout_weight="0.4" />

            <TextView
                android:text="@string/kg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:textSize="12pt"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="RM10_OnClick"
            android:background="@drawable/text_color"
            android:paddingBottom="2dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/rm10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/rm10"
                android:layout_weight="0.3"
                android:textSize="12pt"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/rm10_text"
                android:textSize="12pt"
                android:gravity="center"
                android:layout_weight="0.4" />

            <TextView
                android:text="@string/kg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:textSize="12pt"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="RM12_OnClick"
            android:background="@drawable/text_color"
            android:paddingBottom="2dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/rm12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/rm12"
                android:layout_weight="0.3"
                android:textSize="12pt"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/rm12_text"
                android:textSize="12pt"
                android:gravity="center"
                android:layout_weight="0.4" />

            <TextView
                android:text="@string/kg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:textSize="12pt"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="RM15_OnClick"
            android:background="@drawable/text_color"
            android:paddingBottom="2dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/rm15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/rm15"
                android:layout_weight="0.3"
                android:textSize="12pt"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/rm15_text"
                android:textSize="12pt"
                android:gravity="center"
                android:layout_weight="0.4" />

            <TextView
                android:text="@string/kg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:textSize="12pt"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="RM20_OnClick"
            android:background="@drawable/text_color"
            android:paddingBottom="2dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/rm20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/rm20"
                android:layout_weight="0.3"
                android:textSize="12pt"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/rm20_text"
                android:textSize="12pt"
                android:gravity="center"
                android:layout_weight="0.4" />

            <TextView
                android:text="@string/kg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:textSize="12pt"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
